deployment/base/template/network/allow-egress-s3.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: ddc-example-rds-python-s3-egress
spec:
  podSelector:
    matchLabels:
      app: ddc-example-rds-python
  policyTypes:
  - Egress
  egress:
  - to: []
    ports:
    - protocol: TCP
      port: 443
