deployment/base/template/network/allow-external-ingress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-external-ingress
spec:
  podSelector:
    matchLabels:
      app: ddc-example-rds-python
  ingress:
  - from: []
    ports:
    - protocol: TCP
      port: 5000
