deployment/base/template/network/default-deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
spec:
  podSelector:
    matchLabels:
      app: ddc-example-rds-python
  policyTypes:
  - Ingress
